# Trident

./: .gitmodules  CMakeLists.txt  README.md
Forge/: CMakeLists.txt
Forge/src/: Application.cpp  Application.h  EntryPoint.cpp
Scripts/: Build-Linux.sh  Build-Mac.sh  Build-Unix.sh  Build-Windows.bat  Build.bat
Trident/: CMakeLists.txt
Trident-Forge/: CMakeLists.txt
Trident-Forge/Assets/Shaders/: Basic.frag  Basic.vert  Cube.frag  Skybox.frag  Skybox.vert  Sphere.vert
Trident-Forge/Shaders/: Basic.frag  Basic.vert
Trident-Forge/src/: Application.cpp  Application.h  ApplicationLayer.cpp  ApplicationLayer.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  EntryPoint.cpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Trident/src/: Application.h  Core.h
Trident/src/Camera/: Camera.h  CameraController.cpp  CameraController.h  EditorCamera.cpp  EditorCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Trident/src/Core/: Core.h
Trident/src/ECS/: Components.h  Entity.h  Registry.h  Scene.h  Scene.inl
Trident/src/Events/: ApplicationEvent.h  Event.h  EventDispatcher.h  KeyCodes.h  KeyEvent.h  MouseEvent.h
Trident/src/Geometry/: Geometry.cpp  Geometry.h
Trident/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Trident/src/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
Trident/src/Renderer/: BufferLayout.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  RenderCommand.cpp  RenderCommand.h  RenderPass.h  Renderer.cpp  Renderer.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderDataType.h  Skybox.cpp  Skybox.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Trident/src/Renderer/OpenGL/: OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRenderPass.cpp  OpenGLRenderPass.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Trident/src/Utilities/: FileUtils.cpp  FileUtils.h  Time.cpp  Time.h
Trident/src/WindowsWindow/: WindowAPI.cpp  WindowAPI.h  WindowsWindow.cpp  WindowsWindow.h
Trident/src/WindowsWindow/OpenGL/: OpenGLWindow.cpp  OpenGLWindow.h
